--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "export": "next export"
   },
   "dependencies": {
+    "cookies-next": "^2.1.1",
     "cypress": "^10.0.3",
-    "next": "^12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "next": "^12.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
